--- a/index.html
+++ b/index.html
@@ -1,99 +1,198 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>DIU Admission - Home</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="style.css"/>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>DIU Admission - Home</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .fixed-carousel-height {
+            max-height: 500px;
+            overflow: hidden;
+        }
+
+        .carousel-img {
+            object-fit: cover;
+            height: 500px;
+        }
+
+        .feature-box {
+            background: #f8f9fa;
+            padding: 20px;
+            border-radius: 8px;
+            text-align: center;
+            height: 100%;
+            transition: transform 0.3s ease;
+        }
+
+        .feature-box:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+        }
+
+        .card-img-top {
+            height: 200px;
+            object-fit: cover;
+        }
+    </style>
 </head>
+
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">DIU Admission</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="registration.html">Register</a></li>
-        <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
-      </ul>
+
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
+        <div class="container">
+            <a class="navbar-brand fw-bold" href="#">DIU Admission</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="registration.html">Register</a></li>
+                    <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Carousel -->
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                class="active"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"></button>
+        </div>
+        <div class="carousel-inner fixed-carousel-height">
+            <div class="carousel-item active">
+                <img src="./images/1.jpg" class="d-block w-100 carousel-img" alt="Campus Image" />
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Welcome to DIU</h5>
+                    <p>Shaping the future with innovation and excellence.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="./images/2.jpg" class="d-block w-100 carousel-img" alt="Smart Classroom" />
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Smart Classrooms</h5>
+                    <p>Modern learning environment for every student.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="./images/3.jpg" class="d-block w-100 carousel-img" alt="Research Facilities" />
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Research Opportunities</h5>
+                    <p>Encouraging innovation through advanced research labs.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="./images/4.jpg" class="d-block w-100 carousel-img" alt="Cultural Events" />
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Vibrant Campus Life</h5>
+                    <p>Engage in cultural, sports, and leadership activities.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="./images/5.jpg" class="d-block w-100 carousel-img" alt="Graduation Ceremony" />
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Global Recognition</h5>
+                    <p>Ranked among the top universities worldwide.</p>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
-</nav>
 
-<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"></button>
-  </div>
+    <!-- About -->
+    <section class="container py-5">
+        <h3 class="text-center mb-4">About DIU</h3>
+        <p class="text-center lead">
+            Daffodil International University is one of the top private universities in Bangladesh, offering a wide
+            range of academic programs with a focus on innovation, excellence, and global recognition.
+        </p>
+    </section>
 
-  <div class="carousel-inner fixed-carousel-height">
-  <div class="carousel-item active">
-    <img src="./images/1.jpg" class="d-block w-100 carousel-img" alt="..." />
-  </div>
-  <div class="carousel-item">
-    <img src="./images/2.jpg" class="d-block w-100 carousel-img" alt="..." />
-  </div>
-  <div class="carousel-item">
-    <img src="./images/3.jpg" class="d-block w-100 carousel-img" alt="..." />
-  </div>
-  <div class="carousel-item">
-    <img src="./images/4.jpg" class="d-block w-100 carousel-img" alt="..." />
-  </div>
-  <div class="carousel-item">
-    <img src="./images/5.jpg" class="d-block w-100 carousel-img" alt="..." />
-  </div>
-</div>
+    <!-- Features -->
+    <section class="container py-5">
+        <h3 class="text-center mb-5">Why Choose DIU?</h3>
+        <div class="row g-4">
+            <div class="col-md-4">
+                <div class="feature-box">
+                    <h5>🎓 Quality Education</h5>
+                    <p>Programs designed with international standards and industry relevance.</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="feature-box">
+                    <h5>💻 Modern Campus</h5>
+                    <p>Smart classrooms, well-equipped labs, and advanced learning tools.</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="feature-box">
+                    <h5>🌍 Global Recognition</h5>
+                    <p>Ranked globally by QS and Times Higher Education.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
-</div>
+    <!-- Call to Action -->
+    <section class="bg-primary text-white text-center p-5">
+        <h4>Ready to join DIU?</h4>
+        <p class="mb-4">Register now and take your first step toward a bright future!</p>
+        <a href="registration.html" class="btn btn-light btn-lg">Apply Now</a>
+    </section>
 
-<section class="container mt-5">
-  <h3>About DIU</h3>
-  <p>Daffodil International University is one of the top private universities in Bangladesh, offering a wide range of academic programs. We aim to foster innovation and excellence.</p>
-</section>
+    <!-- Latest News Section -->
+    <section class="container py-5">
+        <h3 class="text-center mb-5">Latest News</h3>
+        <div class="row g-4">
+            <div class="col-md-4">
+                <div class="card h-100 shadow-sm">
+                    <img src="./images/lab.jpg" class="card-img-top" alt="News 1">
+                    <div class="card-body">
+                        <h5 class="card-title">New Research Lab</h5>
+                        <p class="card-text">DIU inaugurated a state-of-the-art research lab for students and faculty.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card h-100 shadow-sm">
+                    <img src="./images/sc.jpg" class="card-img-top" alt="News 2">
+                    <div class="card-body">
+                        <h5 class="card-title">Scholarship Announcement</h5>
+                        <p class="card-text">DIU is offering new scholarships for high-achieving students this semester.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card h-100 shadow-sm">
+                    <img src="./images/cl.jpg" class="card-img-top" alt="News 3">
+                    <div class="card-body">
+                        <h5 class="card-title">Cultural Fest 2025</h5>
+                        <p class="card-text">Join us in celebrating culture, arts, and innovation at DIU’s annual
+                            festival.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
-<section class="container mt-5">
-  <h3 class="mb-4">Why Choose DIU?</h3>
-  <div class="row g-4">
-    <div class="col-md-4">
-      <div class="feature-box">
-        <h5>🎓 Quality Education</h5>
-        <p>Programs designed with international standards.</p>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="feature-box">
-        <h5>💻 Modern Campus</h5>
-        <p>Smart classrooms, labs, and online portals.</p>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="feature-box">
-        <h5>🌍 Global Recognition</h5>
-        <p>Ranked globally by QS and Times Higher Education.</p>
-      </div>
-    </div>
-  </div>
-</section>
+    <!-- Footer -->
+    <footer class="bg-dark text-white text-center py-4">
+        <div class="container">
+            <p class="mb-1">&copy; 2025 Daffodil International University. All rights reserved.</p>
+            <p class="mb-0">📧 admission@diu.edu.bd | 📞 +880-123456789</p>
+        </div>
+    </footer>
 
-
-<section class="bg-primary text-white text-center p-4 mt-5">
-  <h4>Ready to join DIU?</h4>
-  <p>Register now and take your first step toward success!</p>
-  <a href="registration.html" class="btn btn-light">Apply Now</a>
-</section>
-
-<footer class="bg-dark text-white text-center p-3 mt-5">
-  <p>&copy; 2025 Daffodil International University. All rights reserved.</p>
-  <p>Email: admission@diu.edu.bd | Phone: +880-123456789</p>
-</footer>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
